logs/shoobx.wfmc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/persistent'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/persistent'...
Listing './lib/python3.5/site-packages/persistent/tests'...
Listing './lib/python3.5/site-packages/persistent-4.2.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shoobx'...
Listing './lib/python3.5/site-packages/shoobx/wfmc'...
Listing './lib/python3.5/site-packages/shoobx/wfmc/adapter'...
Compiling './lib/python3.5/site-packages/shoobx/wfmc/process.py'...
***   File "./lib/python3.5/site-packages/shoobx/wfmc/process.py", line 1235
    exec code in ALLOWED_BUILTINS, result
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/shoobx/wfmc/tests.py'...
***   File "./lib/python3.5/site-packages/shoobx/wfmc/tests.py", line 49
    print 'Workitem %i for activity %r started.' % (
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shoobx/wfmc/xpdl.py'...
***   File "./lib/python3.5/site-packages/shoobx/wfmc/xpdl.py", line 162
    ), None, sys.exc_info()[2]
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shoobx.wfmc-4.0.4.egg-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/cachedescriptors'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.cachedescriptors-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
